--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,6 +4,6 @@
 body{font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 background-image:url('https://img.freepik.com/foto-gratis/fondo-pantalla-edificios-luna-arte-digital_23-2150918703.jpg');
 background-size: cover;
-color:aliceblue
+/* color:aliceblue */
 }
 
